adding some authentication pieces

--- a/config/config.env
+++ b/config/config.env
@@ -1,1 +1,3 @@
 PORT = 3100
+GOOGLE_CLIENT_ID = 68912677869-rlbrcuec6tj1qks8bvl2gp6rhpa14v63.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET = AN8Hc2t0YRMYks667bVGvPLP
